# LUMEN-GENESIS-KIT

./: .gitignore  README.md  SPEC.md
lumen-agent-zero-v2/: .env.example  .eslintrc.cjs  .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  LICENSE  PROJECT_REPORT.md  README.md  package-lock.json  package.json  tsconfig.json
lumen-agent-zero-v2/scripts/: print_topics.ts
lumen-agent-zero-v2/src/: AgentZeroV2.ts  contracts.ts  heartbeat.ts  run.ts  topics.ts  utils.ts
lumen-agent-zero-v2/storage/: README.md
lumen-kernel-v0-vscode-monetized/lumen-kernel-v0-deploy-kit/: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  LICENSE  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
lumen-kernel-v0-vscode-monetized/lumen-kernel-v0-deploy-kit/contracts/: LumenKernelV0.sol
lumen-kernel-v0-vscode-monetized/lumen-kernel-v0-deploy-kit/scripts/: boot_kernel.ts  check_env.ts  deploy_base.ts  open_gates.ts
lumen-kernel-v0-vscode-monetized/lumen-kernel-v0-deploy-kit/test/: kernel.test.ts
lumen-langchain-kit/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
lumen-langchain-kit/src/: LumenTool.ts  index.ts  test_ai.ts
lumen-relay-monitor/lumen-relay-monitor/: .env.example  .gitignore  README.md  package-lock.json  package.json
lumen-relay-monitor/lumen-relay-monitor/public/: app.js  index.html  style.css
lumen-relay-monitor/lumen-relay-monitor/src/: abi.ts  db.ts  index.ts  poller.ts
python/lumen-worldcomputer-sdk/: pyproject.toml
python/lumen-worldcomputer-sdk/src/lumen_worldcomputer/: client.py  hashing.py
(+2 files in other folders)
