[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-worldcomputer-sdk"
version = "0.1.0"
description = "Official Python SDK for LUMEN World Computer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["web3>=6.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["src"]
